--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -8606,7 +8606,7 @@
     }
    ],
    "source": [
-    "# Create a deep copy for formatting in case we need the raw date later\n",
+    "# Create a deep copy for formatting in case we need the raw data later\n",
     "format_size_bucket_means_df = size_bucket_means_df.copy(deep=True)\n",
     "\n",
     "# Format the # into 2 decimal places\n",
@@ -8617,13 +8617,6 @@
     "format_size_bucket_means_df[\"% Overall Passing\"] = format_size_bucket_means_df[\"% Overall Passing\"].map(\"{:.2f}\".format)\n",
     "format_size_bucket_means_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -8716,7 +8709,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# My final output above \n",
+    "#\n",
+    "# Keeping original output below so I compare my results to this"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8730,6 +8727,317 @@
    "metadata": {},
    "source": [
     "* Perform the same operations as above, based on school type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>3124928</td>\n",
+       "      <td>628.0</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "      <td>66.680064</td>\n",
+       "      <td>81.933280</td>\n",
+       "      <td>54.642283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>1081356</td>\n",
+       "      <td>582.0</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>1884411</td>\n",
+       "      <td>639.0</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     School Type  Total Students  Total School Budget  \\\n",
+       "                                                                        \n",
+       "Bailey High School      District            4976              3124928   \n",
+       "Cabrera High School      Charter            1858              1081356   \n",
+       "Figueroa High School    District            2949              1884411   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "                                                               \n",
+       "Bailey High School                 628.0           77.048432   \n",
+       "Cabrera High School                582.0           83.061895   \n",
+       "Figueroa High School               639.0           76.711767   \n",
+       "\n",
+       "                      Average Reading Score  % Passing Math  \\\n",
+       "                                                              \n",
+       "Bailey High School                81.033963       66.680064   \n",
+       "Cabrera High School               83.975780       94.133477   \n",
+       "Figueroa High School              81.158020       65.988471   \n",
+       "\n",
+       "                      % Passing Reading  % Overall Passing  \n",
+       "                                                            \n",
+       "Bailey High School            81.933280          54.642283  \n",
+       "Cabrera High School           97.039828          91.334769  \n",
+       "Figueroa High School          80.739234          53.204476  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a copy into our school_type_df of work_df which contains the raw data from an earlier exercise\n",
+    "# easier to reuse this\n",
+    "school_type_df = work_df.copy(deep=True)\n",
+    "school_type_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the mean for each of the school types by grouping by the school type column that is present already\n",
+    "school_type_mean_df = school_type_df.groupby('School Type').agg({\n",
+    "    'Average Math Score':'mean',\n",
+    "    'Average Reading Score':'mean',\n",
+    "    '% Passing Math': 'mean',\n",
+    "    '% Passing Reading': 'mean',\n",
+    "    '% Overall Passing': 'mean'\n",
+    "})\n",
+    "school_type_mean_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.47</td>\n",
+       "      <td>83.90</td>\n",
+       "      <td>93.62</td>\n",
+       "      <td>96.59</td>\n",
+       "      <td>90.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.96</td>\n",
+       "      <td>80.97</td>\n",
+       "      <td>66.55</td>\n",
+       "      <td>80.80</td>\n",
+       "      <td>53.67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                  83.47                 83.90          93.62   \n",
+       "District                 76.96                 80.97          66.55   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                 96.59             90.43  \n",
+       "District                80.80             53.67  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a deep copy for formatting in case we need the raw data later\n",
+    "format_school_type_means_df = school_type_mean_df.copy(deep=True)\n",
+    "\n",
+    "# Format the # into 2 decimal places\n",
+    "format_school_type_means_df[\"Average Math Score\"] = format_school_type_means_df[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
+    "format_school_type_means_df[\"Average Reading Score\"] = format_school_type_means_df[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
+    "format_school_type_means_df[\"% Passing Math\"] = format_school_type_means_df[\"% Passing Math\"].map(\"{:.2f}\".format)\n",
+    "format_school_type_means_df[\"% Passing Reading\"] = format_school_type_means_df[\"% Passing Reading\"].map(\"{:.2f}\".format)\n",
+    "format_school_type_means_df[\"% Overall Passing\"] = format_school_type_means_df[\"% Overall Passing\"].map(\"{:.2f}\".format)\n",
+    "format_school_type_means_df"
    ]
   },
   {
@@ -8811,7 +9119,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# My final output above \n",
+    "#\n",
+    "# Keeping original output below so I compare my results to this"
+   ]
   },
   {
    "cell_type": "code",
